[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/scripts/resource_container.gd" type="Script" id=1]
[ext_resource path="res://assets/scripts/constructs/solid_electrolyzer.gd" type="Script" id=2]
[ext_resource path="res://assets/constructs/construct.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.7375, 15.9796 )

[node name="SolidElectrolyzer" type="Area2D"]
position = Vector2( 79.7574, 94.3874 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Input" type="Node" parent="."]
script = ExtResource( 1 )
resource_type = "Regolith"
is_input = true

[node name="Output1" type="Node" parent="."]
script = ExtResource( 1 )
resource_type = "Oxygen"
is_output = true

[node name="Output2" type="Node" parent="."]
script = ExtResource( 1 )
resource_type = "Slag"
is_output = true
